log/build_2025-04-18_14-50-52/arm_bot/stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/jetson/Desktop/ros2_ws1/install/arm_bot/lib/python3.8/site-packages/arm_bot/sub_sensinfo.py", line 77
    else if not output_quene.emty():
         ^
SyntaxError: invalid syntax

Sorry: IndentationError: expected an indented block (sub_servoes.py, line 99)
